# astralink

./: .env.example  .gitignore  Cargo.toml  Dockerfile
src/: api.rs  config.rs  main.rs  model.rs  state.rs
src/audio/: mod.rs  playback.rs  stream.rs
src/net/: ipv6.rs  mod.rs  node.rs
src/resolve/: mod.rs  preload.rs  soundcloud.rs  spotify.rs  ytdl.rs
