[package]
name = "astralink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.7", features = ["json", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
dashmap = "5"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tokio-util = { version = "0.7", features = ["codec"] }
youtube_dl = { version = "0.10", features = ["tokio"] }
spotify-rs = "0.4"
soundcloud-rs = "0.14"
anyhow = "1"
base64 = "0.22"
once_cell = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
rand = "0.8"
